# flaskpoetry-template

./: .editorconfig  .flake8  .gitattributes  .gitignore  .log4brains.yml  Dockerfile  README.md  index.html  pyproject.toml
.github/workflows/: docs.yml
404/: index.html
_next/data/jOsxgMtjEG6U_w4CDzsoL/: index.json
_next/data/jOsxgMtjEG6U_w4CDzsoL/adr/: 20230314-use-log4brains-to-manage-the-adrs.json
_next/static/chunks/: commons.46a61527f2ce091f8560.js
_next/static/jOsxgMtjEG6U_w4CDzsoL/: _buildManifest.js
_next/static/ojCBhGs-b3cE0P6I2QhS5/: _buildManifest.js
adr/20230314-use-log4brains-to-manage-the-adrs/: index.html
config/: setup.cfg
data/jOsxgMtjEG6U_w4CDzsoL/: adrs.json  search-index.json
docs/adr/: 20230314-use-log4brains-to-manage-the-adrs.md  README.md
src/app/: __init__.py  app.py  exts.py
src/app/templates/: base.html
tests/: __init__.py  test_app.py
