[tool.poetry]
name = "flasktemplate"
version = "0.1.0"
description = ""
authors = ["Jimmy Briggs <jimmy.briggs@jimbrig.com>"]
readme = "README.md"
packages = [{include = "app", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.2.3"
flask-sqlalchemy = "^3.0.3"
dynaconf = "^3.1.12"
gunicorn = "^20.1.0"
pyodbc = "^4.0.35"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.1.0"
commitizen = "^2.42.1"
pre-commit = "^3.1.1"
flask-debugtoolbar = "^0.13.1"
flask-migrate = "^4.0.4"
pytest = "^7.2.2"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"

# See https://docs.pytest.org/en/stable/how-to/capture-warnings.html#deprecationwarning-and-pendingdeprecationwarning
[tool.pytest.ini_options]
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::PendingDeprecationWarning"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
